--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.0.7",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
