--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@react-hook/window-size": "^3.0.7",
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
