--- a/app/package.json
+++ b/app/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-hook/window-size": "^3.0.7",
     "axios": "^0.27.2",
+    "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "stripe": "^9.1.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
