--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@react-hook/window-size": "^3.0.7",
+    "@stripe/react-stripe-js": "^1.8.0",
+    "@stripe/stripe-js": "^1.29.0",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "stripe": "^9.1.0"
   },
