--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.29.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "iron-session": "^6.1.3",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
