--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,10 @@
     "@react-hook/window-size": "^3.0.7",
     "@stripe/react-stripe-js": "^1.8.0",
     "@stripe/stripe-js": "^1.29.0",
+    "aws-sdk": "^2.1145.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "formidable": "^2.0.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
