--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.1145.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.28.0",
     "formidable": "^2.0.1",
     "iron-session": "^6.1.3",
     "mongodb": "^4.6.0",
