--- a/app/package.json
+++ b/app/package.json
@@ -15,9 +15,11 @@
     "aws-sdk": "^2.1145.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "date-fns": "^2.28.0",
     "formidable": "^2.0.1",
     "iron-session": "^6.1.3",
+    "js-sha256": "^0.9.0",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
