--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "js-sha256": "^0.9.0",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
